[workspace]
members = [
    "antelope-tokens",
    "antelope-tokens-block-index",
    "antelope-tokens-events",
]
resolver = "2"

[workspace.package]
edition = "2021"
version = "0.0.0"

[workspace.dependencies]
substreams-entity-change = "2"
substreams-antelope = "0.6"
substreams = "0.6"
antelope = "0.2"

[profile.release]
lto = true
opt-level = 's'
strip = "debuginfo"
