[package]
name = "antelope-tokens"
edition = "2021"
version = "0.0.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
prost = "0.13"
substreams-database-change = "2"
substreams-entity-change = "2"
substreams-antelope = "0.6"
substreams = "0.6"
antelope = "0.2"

[profile.release]
lto = true
opt-level = 's'
strip = "debuginfo"
